; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/mouse/extr_psmouse-base.c_psmouse_do_detect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/mouse/extr_psmouse-base.c_psmouse_do_detect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.psmouse = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@SERIO_PS_PSTHRU = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32 (%struct.psmouse*, i32)*, %struct.psmouse*, i32, i32)* @psmouse_do_detect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @psmouse_do_detect(i32 (%struct.psmouse*, i32)* %0, %struct.psmouse* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32 (%struct.psmouse*, i32)*, align 8
  %7 = alloca %struct.psmouse*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 (%struct.psmouse*, i32)* %0, i32 (%struct.psmouse*, i32)** %6, align 8
  store %struct.psmouse* %1, %struct.psmouse** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load %struct.psmouse*, %struct.psmouse** %7, align 8
  %11 = getelementptr inbounds %struct.psmouse, %struct.psmouse* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i32 0, i32 0
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @SERIO_PS_PSTHRU, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %4
  %20 = load i32, i32* %8, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %19
  store i32 0, i32* %5, align 4
  br label %36

23:                                               ; preds = %19, %4
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %29

26:                                               ; preds = %23
  %27 = load %struct.psmouse*, %struct.psmouse** %7, align 8
  %28 = call i32 @psmouse_apply_defaults(%struct.psmouse* %27)
  br label %29

29:                                               ; preds = %26, %23
  %30 = load i32 (%struct.psmouse*, i32)*, i32 (%struct.psmouse*, i32)** %6, align 8
  %31 = load %struct.psmouse*, %struct.psmouse** %7, align 8
  %32 = load i32, i32* %9, align 4
  %33 = call i32 %30(%struct.psmouse* %31, i32 %32)
  %34 = icmp eq i32 %33, 0
  %35 = zext i1 %34 to i32
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %29, %22
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @psmouse_apply_defaults(%struct.psmouse*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
